save as in progress

--- a/test.ipynb
+++ b/test.ipynb
@@ -155,9 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['c', 'dsd', 'dsds', 'dsd']"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "str.split('c\\dsd\\dsds\\dsd', '\\\\')\n",
     "\n",
     "\n",
     "\n",
